fixes and more tests

--- a/frontend/i18n/messages/es.json
+++ b/frontend/i18n/messages/es.json
@@ -1,7 +1,6 @@
 {
   "HomePage": {
-    "title": "Hola!",
-    "about": "sasa"
+    "title": "Frontbuild es un repositorio que contiene mis proyectos personales y una visión general de mi trayectoria como desarrollador.",
+    "profile": "Ir a mi perfil"
   }
 }
-
