--- a/frontend/i18n/messages/en.json
+++ b/frontend/i18n/messages/en.json
@@ -1,7 +1,7 @@
 {
   "HomePage": {
-    "title": "Hello world!",
-    "about": "Go to the about page"
+    "title": "Frontbuild is a repository which contains my personal projects and an overview of my career as developer.",
+    "profile": "Go to my profile"
   }
 }
 
