--- a/frontend/i18n/messages/en.json
+++ b/frontend/i18n/messages/en.json
@@ -1,6 +1,6 @@
 {
   "HomePage": {
-    "title": "Frontbuild is a repository which contains my personal projects and an overview of my career as developer.",
+    "title": "Hi, my name is Hector Zea, this is my personal portfolio, im a software enginer focused in building web applications.",
     "profile": "Go to my profile",
     "cv": "cv_en_hz",
     "cvLinkName": "Download CV"
