--- a/frontend/i18n/messages/es.json
+++ b/frontend/i18n/messages/es.json
@@ -1,6 +1,6 @@
 {
   "HomePage": {
-    "title": "Frontbuild es un repositorio que contiene mis proyectos personales y una visión general de mi trayectoria como desarrollador.",
+    "title": "Hola, mi nombre es Hector Zea, este es mi portafolio personal, soy un ingeniero de software enfocado en construir aplicaciones web.",
     "profile": "Ir a mi perfil",
     "cv": "cv_es_hz",
     "cvLinkName": "Descargar CV"
