--- a/frontend/i18n/messages/en.json
+++ b/frontend/i18n/messages/en.json
@@ -5,6 +5,20 @@
     "cv": "cv_en_hz",
     "cvLinkName": "Download CV"
   },
+  "ProfilePage": {
+    "title": "Profile Page Title",
+    "skills": {
+      "innovation": {
+        "description": "Tengo amplia experiencia y conocimientos en tecnologías frontend modernas como React, Angular, TypeScript y Redux, lo que me permite desarrollar aplicaciones web eficientes y escalables."
+      },
+      "curious": {
+        "description": "Siempre me apasiona aprender nuevas tecnologías y metodologías, lo que me permite adaptarme rápidamente a diferentes entornos de trabajo y aportar soluciones innovadoras a los desafíos que enfrento."
+      },
+      "deliver": {
+        "description": "Tengo siempre la motivación de entregar productos de alta calidad que cumplan con los requisitos del cliente y superen sus expectativas, asegurando que cada proyecto se complete a tiempo y dentro del presupuesto.  "
+      }
+    }
+  },
   "ProfileLayout": {
     "sidebarItem": {
       "item1": "About Me",
@@ -16,6 +30,35 @@
     },
     "title": "Hector Zea",
     "description": "I like to build things with code. Im a software engineer based in Berlin, Germany."
+  },
+  "TestingPage": {
+    "title": "Testing page title",
+    "testPath": {
+      "path1": {
+        "title": "Pruebas unitarias y de integración",
+        "description": "Implementé pruebas unitarias y de integración utilizando Jest y React Testing Library para asegurar la funcionalidad y estabilidad del código, logrando una cobertura de pruebas del 85%."
+      },
+      "path2": {
+        "title": "Pruebas unitarias y de integración",
+        "description": "Implementé pruebas unitarias y de integración utilizando Jest y React Testing Library para asegurar la funcionalidad y estabilidad del código, logrando una cobertura de pruebas del 85%."
+      },
+      "path3": {
+        "title": "Pruebas unitarias y de integración",
+        "description": "Implementé pruebas unitarias y de integración utilizando Jest y React Testing Library para asegurar la funcionalidad y estabilidad del código, logrando una cobertura de pruebas del 85%."
+      },
+      "path4": {
+        "title": "Pruebas unitarias y de integración",
+        "description": "Implementé pruebas unitarias y de integración utilizando Jest y React Testing Library para asegurar la funcionalidad y estabilidad del código, logrando una cobertura de pruebas del 85%."
+      },
+      "path5": {
+        "title": "Pruebas unitarias y de integración",
+        "description": "Implementé pruebas unitarias y de integración utilizando Jest y React Testing Library para asegurar la funcionalidad y estabilidad del código, logrando una cobertura de pruebas del 85%."
+      },
+      "path6": {
+        "title": "Pruebas unitarias y de integración",
+        "description": "Implementé pruebas unitarias y de integración utilizando Jest y React Testing Library para asegurar la funcionalidad y estabilidad del código, logrando una cobertura de pruebas del 85%."
+      }
+    }
   },
   "CraftingSoftware": {
     "title": "Understanding the business",
