updated front page

--- a/frontend/i18n/messages/en.json
+++ b/frontend/i18n/messages/en.json
@@ -1,7 +1,7 @@
 {
   "HomePage": {
     "title": "Hi, my name is Hector Zea, this is my personal portfolio, im a software enginer focused in building web applications.",
-    "profile": "Go to my profile",
+    "profile": "Go to my projects",
     "cv": "cv_en_hz",
     "cvLinkName": "Download CV"
   },
