--- a/frontend/i18n/messages/es.json
+++ b/frontend/i18n/messages/es.json
@@ -1,7 +1,7 @@
 {
   "HomePage": {
     "title": "Hola, mi nombre es Hector Zea, este es mi portafolio personal, soy un ingeniero de software enfocado en construir aplicaciones web.",
-    "profile": "Ir a mi perfil",
+    "profile": "Ir a mis proyectos",
     "cv": "cv_es_hz",
     "cvLinkName": "Descargar CV"
   },
